BatchWriteOp::noteBatchError doesn't update it's state to error if there are child ops still in pending

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.11
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 2019-04-22, Sharding 2019-05-06
    • 21
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This is because of the condition here. For normal writes, the executor would try to move them into a state where all child ops would have a state that's not pending, but because we stop early for transactions, it is possible to end up in this situation.

            Assignee:
            Randolph Tan
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: