SERVER-40751 BatchWriteOp::noteBatchError doesn't update it's state to error if there are child ops still in pending